--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
   "require": {
     "craftcms/cms": "3.3.16.3",
+    "craftcms/contact-form": "2.2.5",
+    "craftcms/mailgun": "1.4.2",
     "craftcms/redactor": "2.4.0",
     "vlucas/phpdotenv": "^3.4.0"
   },
